--- a/07-files.tex
+++ b/07-files.tex
@@ -47,12 +47,11 @@ and written through database software.
 
 When we want to read or write a file (say on your hard drive), we first
 must {\bf open} the file.  Opening the file communicates with your operating
-system which knows where the data for each file is stored.  When you open
+system, which knows where the data for each file is stored.  When you open
 a file, you are asking the operating system to find the file by name
 and make sure the file exists.  In this example, we open the file 
-{\tt mbox.txt} which should be stored in the same folder that you
-are in when you 
-start Python.
+{\tt mbox.txt}, which should be stored in the same folder that you
+are in when you start Python.
 You can download this file from 
 \url{www.py4inf.com/code/mbox.txt}
 
@@ -119,7 +118,7 @@ These files are in a standard format for a file containing
 multiple mail messages. The lines which start with 
 ``From '' separate the messages and the lines which start 
 with ``From:'' are part of the messages. 
-For more information, see 
+For more information about the mbox format, see 
 \url{en.wikipedia.org/wiki/Mbox}. 
 
 To break the file into lines, there is a special character that 
@@ -155,8 +154,8 @@ You can also see that the length of the string \verb"'X\nY'" is \emph{three}
 characters because the newline character is a single character.
 
 So when we look at the lines in a file, we need to \emph{imagine}
-that there is a special invisible character at the end of each line
-that marks the end of the line called the newline.  
+that there is a special invisible character called the newline at
+the end of each line that marks the end of the line.  
 
 % \beforeverb
 % \begin{alltt}
@@ -214,7 +213,7 @@ the newline and includes
 the newline as the last character in the {\tt line} variable for each 
 iteration of the {\tt for} loop.
 
-Because the for loop reads the data one line at a time, it can efficiently
+Because the {\tt for} loop reads the data one line at a time, it can efficiently
 read and count the lines in very large files without running 
 out of main memory to store the data.  The above program can 
 count the lines in any size file using very little memory since 
@@ -255,8 +254,8 @@ loop.
 
 When you are searching through data in a file, it
 is a very common pattern to read through a file, ignoring most
-of the lines and only processing lines which meet a particular criteria.
-We can combine the pattern for reading a file with string {\bf methods}
+of the lines and only processing lines which meet a particular condition.
+We can combine the pattern for reading a file with string methods
 to build simple search mechanisms.
 
 \index{filter pattern}
@@ -352,15 +351,15 @@ for line in fhand:
 The output of the program is the same.  In English, the 
 uninteresting lines are those which do not start 
 with ``From:'', which we skip using {\tt continue}.
-For the ``interesting'' lines (i.e. those that start with ``From:'')
+For the ``interesting'' lines (i.e., those that start with ``From:'')
 we perform the processing on those lines.
 
 We can use the {\tt find} string method to simulate a text editor
-search which finds lines where the search string is anywhere in the line.  
+search that finds lines where the search string is anywhere in the line.  
 Since {\tt find} looks for an occurrence of a string within another
 string and either returns the position of the string or -1 if the string
 was not found, we can write the following loop to show lines which
-contain the string ``@uct.ac.za'' (i.e. they come from the University 
+contain the string ``@uct.ac.za'' (i.e., they come from the University 
 of Cape Town in South Africa):
 
 \beforeverb
@@ -434,7 +433,7 @@ Before peeking at the next section, take a look at the above program
 and ask yourself, ``What could go possibly wrong here?'' or ``What might our
 friendly user do that would cause our nice little program to 
 ungracefully exit with a traceback, making us look not-so-cool 
-in the eyes of our users?''.
+in the eyes of our users?''
 
 \section{Using {\tt try, except,} and {\tt open}}
 
@@ -461,7 +460,7 @@ IOError: [Errno 2] No such file or directory: 'na na boo boo'
 \afterverb
 %
 Do not laugh, users will eventually do every possible thing they can do 
-to break your programs --- either on purpose or with malicious intent.
+to break your programs---either on purpose or with malicious intent.
 As a matter of fact, an important part of any software development
 team is a person or group called {\bf Quality Assurance} (or QA for short)
 whose very job it is to do the craziest things possible in an attempt
@@ -470,7 +469,7 @@ to break the software that the programmer has created.
 \index{Quality Assurance}
 \index{QA}
 The QA team is responsible for finding the flaws in programs before 
-we have delivered the program to the end-users who may be purchasing the
+we have delivered the program to the end users who may be purchasing the
 software or paying our salary to write the software.  So the QA team
 is the programmer's best friend.
 
@@ -528,7 +527,7 @@ way''.  We might say that the above example is
 the Pythonic way to open a file.
 
 Once you become more skilled in Python, you can engage
-in repartee' with other Python programmers to decide
+in repartee with other Python programmers to decide
 which of two equivalent solutions to a problem is 
 ``more Pythonic''.  The goal to be ``more Pythonic'' 
 captures the notion that programming is part engineering
@@ -562,7 +561,7 @@ puts data into the file.
 
 \beforeverb
 \begin{verbatim}
->>> line1 = 'This here's the wattle,\n'
+>>> line1 = "This here's the wattle,\n"
 >>> fout.write(line1)
 \end{verbatim}
 \afterverb
@@ -612,7 +611,7 @@ to chance.
 
 When you are reading and writing files, you might run into problems
 with whitespace.  These errors can be hard to debug because spaces,
-tabs and newlines are normally invisible:
+tabs, and newlines are normally invisible:
 
 \beforeverb
 \begin{verbatim}
@@ -662,8 +661,7 @@ could write one yourself.
 \begin{description}
 
 \item[catch:] To prevent an exception from terminating
-a program using the {\tt try}
-and {\tt except} statements.
+a program using the {\tt try} and {\tt except} statements.
 \index{catch}
 
 \item[newline:] A special character used in files and strings to indicate
@@ -672,7 +670,7 @@ the end of a line.
 
 \item[Pythonic:] A technique that works elegantly in Python.
 ``Using try and except is the \emph{Pythonic} way to recover from 
-missing files.''.
+missing files''.
 \index{Pythonic}
 
 \item[Quality Assurance:] A person or team focused on insuring the 
@@ -725,11 +723,10 @@ X-DSPAM-Confidence: {\bf 0.8475}
 
 When you encounter a line that starts with 
 ``X-DSPAM-Confidence:'' pull apart the line to extract the
-floating point number on the line.  Count these 
-lines and the compute the total of the spam confidence 
-values from these lines.
-When you reach the end of the file, print out the average
-spam confidence.
+floating-point number on the line.  Count these lines and
+then compute the total of the spam confidence values from
+these lines. When you reach the end of the file, print out
+the average spam confidence.
 
 \beforeverb
 \begin{verbatim}
@@ -750,7 +747,7 @@ Sometimes when programmers get bored or want to have a bit of fun,
 they add a harmless {\bf Easter Egg} to their program 
 (\url{en.wikipedia.org/wiki/Easter_egg_(media)}). Modify the program
 that prompts the user for the file name so that it prints a funny
-message when the user types in the exact file name 'na na boo boo'. 
+message when the user types in the exact file name ``na na boo boo''. 
 The program should behave normally for all other files which exist
 and don't exist.  Here is a sample execution of the program:
 
@@ -770,8 +767,8 @@ NA NA BOO BOO TO YOU - You have been punk'd!
 \end{verbatim}
 \afterverb
 %
-We are not encouraging you to put Easter Eggs in your programs -
-this is just an exercise.
+We are not encouraging you to put Easter Eggs in your 
+programs---this is just an exercise.
 
 \end{ex}
 
