--- a/09-dictionaries.tex
+++ b/09-dictionaries.tex
@@ -459,7 +459,7 @@ make a list of the keys in the dictionary using the
 {\tt keys} method available in dictionary objects,
 and then sort that list
 and loop through the sorted list, looking up each
-key and printing out key/value pairs in sorted order
+key and printing out key-value pairs in sorted order
 as follows:
 
 \beforeverb
@@ -485,7 +485,7 @@ jan 100
 \afterverb
 %
 First you see the list of keys in unsorted order that 
-we get from the {\tt keys} method.  Then we see the key/value
+we get from the {\tt keys} method.  Then we see the key-value
 pairs in order from the {\tt for} loop.
 
 \section{Advanced text parsing}
